--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.0",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "doctrine/dbal": "v2.4.2"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
@@ -36,7 +37,8 @@
         },
         "classmap": [
             "database/seeds",
-            "database/factories"
+            "database/factories",
+            "doctrine/dbal"
         ]
     },
     "autoload-dev": {
